# billiard-3d

./: .gitignore  CMakeLists.txt  DrawFunc.cpp  DrawFunc.h  GlutHFunc.cpp  GlutHFunc.h  README.md  classic  dialog.py  fpsMeasurer.cpp  glutRender.cpp  glutRender.cpp~  glutRender.h  lunev  lunev~  sound.cpp  sound.h  table.cfg~  table.cpp  table.h  vec.h
Billiard3D/: .gitignore  .glutRender.cpp.swp  Billiard3D.sln  CMakeLists.txt  Teormech.cbp  Teormech.depend  Teormech.layout  Teormech_build_log.html  ball.cfg  fps.cfg  glutRender.cpp  glutRender.h  main  quat.cpp  quat.h  sound.h  sounds.cfg  table.cpp  test.cpp
Billiard3D/Billiard3D/: .lunev.swp  Billiard3D.vcxproj  Billiard3D.vcxproj.filters  DrawFunc.cpp  DrawFunc.h  GlutHFunc.cpp  GlutHFunc.h  Teormech.bmarks  Teormech.cbp  Teormech.depend  Teormech.layout  fps.cfg  fpsMeasurer.cpp  fpsMeasurer.h  glutRender.cpp  glutRender.h  lunev  quat.cpp  quat.h  table.cfg  table.cpp  table.h  test.cpp  vec.cpp  vec.h
Billiard3D/Billiard3D/Debug/: vc120.idb
Billiard3D/Billiard3D/Debug/Billiard3D.tlog/: Billiard3D.lastbuildstate  CL.read.1.tlog  (+5 more)
Billiard3D/Billiard3D/tests/: heavy_track
Billiard3D/Billiard3D/textures/: 00.data  05.data  _00.data  table.data  tree.data
Billiard3D/Debug/tests/: change_momentum  dognal_i_dal  double_kick  high_up  symmetric
Billiard3D/textures/: 03.data  07.data  08.data  09.data  10.data  11.data  13.data  14.data
Billiard3D_Win/: Billiard3D_Win.sln
Billiard3D_Win/Billiard3D_Win/: Billiard3D_Win.vcxproj  Billiard3D_Win.vcxproj.filters  Makefile  glutRender.cpp  glutRender.h  main.cpp  rep.txt
Billiard3D_Win/Billiard3D_Win/Debug/: vc120.idb
Teormech/: .gitignore  DrawFunc.cpp  DrawFunc.h  GlutHFunc.cpp  GlutHFunc.h  Teormech  Teormech.cbp  Teormech.depend  Teormech.layout  Teormech.sln  Teormech.userprefs  data  data3  glutRender.cpp  glutRender.h  lunev  shit.txt  start.sh  table.cfg  table.cpp  table.h  tesh.cpp  test.cpp  vec.cpp  vec.h
Teormech/Teormech/: Teormech.cproj  table.cpp  table.h  tesh.cpp  vec.cpp  vec.h
billiard/: Teormech.cbp  ball.cfg  main.cpp
billiard/graphics/: glutRender.cpp  glutRender.h
billiard/math/: vec.h
billiard/physics/: ball.cpp  ball.h  table.cpp  table.h
billiard/tests/: babah  ivanov_test  ll  simple_collision  soph_collision1  square
gui/: Button.cpp  Button.h  Edit.cpp  Edit.h  EditFloat.cpp  EditFloat.h  Widget.cpp  Widget.h
tests/: 2kick  fill  heavy_track  lunev  rezal_tests
textures/: 01.data  02.data  04.data  06.data  12.data  15.data  land.data
(+5 files in other folders)
